fix: carousel size that is too small

--- a/css/style.css
+++ b/css/style.css
@@ -112,10 +112,6 @@ footer {
   justify-content: center;
 }
 
-.tab-pane {
-  width: 60%;
-}
-
 .card {
   height: 23.5rem;
   --bs-card-border-color: transparent;
